# PySME

./: pyproject.toml
.github/workflows/: build-wheels.yml  python-app.yml
